--- a/src/main/resources/templates/disciplines/disciplines.html
+++ b/src/main/resources/templates/disciplines/disciplines.html
@@ -8,7 +8,7 @@
 			<div class="col-md-8">
 				<label for="inputFilter">Pesquise por</label>
 				<input id="inputFilter" class="form-control" type="text"
-					placeholder="Disciplina, Assunto, Palavra chave">
+					placeholder="Disciplina, Assunto, Palavra-chave">
 			</div>
 
 			<div class="col-6 col-md-4">
