--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -3,8 +3,6 @@
 	th:fragment="base (title, template)">
 <head>
 <!-- Required meta tags -->
-<meta http-equiv="Content-Language" content="pt-br">
-
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -15,27 +13,23 @@
 	integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
 	crossorigin="anonymous">
 
-<!-- Bootstrap CSS -->
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-	crossorigin="anonymous">
-
+<!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+
+<!-- WYSIWYG editor -->
 <script src="https://cdn.ckeditor.com/4.16.0/standard-all/ckeditor.js"></script>
 
 <!-- Datatables -->
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.23/css/jquery.dataTables.css">
-<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.js"></script>
-
+<link rel="stylesheet" type="text/css"
+	href="https://cdn.datatables.net/1.10.23/css/jquery.dataTables.css">
+<script type="text/javascript" charset="utf8"
+	src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.js"></script>
 
 <title
 	th:text="${title} == '' ? 'Fatecando' : ${title} + ' - Fatecando'"></title>
 
 <link rel="icon"
 	href="https://image.winudf.com/v2/image1/Y29tLnR5YWdveS5mYXRlY19pY29uXzE1NzM1NjM0MTRfMDMx/icon.png?w=170&fakeurl=1">
-
 </head>
 <body>
 	<header>
@@ -76,8 +70,8 @@
 					</ul>
 					<form class="d-flex">
 						<input class="form-control me-2" type="search"
-							placeholder="Search" aria-label="Search">
-						<button class="btn btn-outline-dark" type="submit">Search</button>
+							placeholder="Pesquisar" aria-label="Search">
+						<button class="btn btn-outline-dark" type="submit">Pesquisar</button>
 					</form>
 				</div>
 			</div>
