--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="www.thymeleaf.org"
 	th:replace="~{fragments/layout :: base('', ~{::body})}">
+<head>
+<meta charset="utf-8">
+</head>
 <body>
 	<h3 class="fw-bolder text-center mt-3">Vantagens de ser Um
 		Fatecando</h3>
@@ -10,7 +13,7 @@
 			<div class="card bg-primary text-white shadow-lg">
 				<div class="card-body">
 					<h4 class="card-title">Comece do Zero, Comece Agora</h4>
-					<p class="card-text">Siga o cronograma, e chegue la!</p>
+					<p class="card-text">Siga o cronograma, e chegue lá!</p>
 				</div>
 			</div>
 		</div>
@@ -19,8 +22,8 @@
 			<div class="card bg-danger text-white shadow-lg">
 				<div class="card-body">
 					<h4 class="card-title">Estudar = aula + treino</h4>
-					<p class="card-text">Metodologia focada na pratica com
-						exercicios e simulados.</p>
+					<p class="card-text">Metodologia focada na prática com
+						exercícios e simulados.</p>
 				</div>
 			</div>
 		</div>
@@ -40,9 +43,9 @@
 			<div class="card bg-warning text-black shadow-lg">
 				<div class="card-body">
 					<h4 class="card-title">Suas DP's acabaram</h4>
-					<p class="card-text">Fatecando nao fica de DP! Materiais certos
-						e organizados, Quizes, Simulados e auxilio dos Fatecandos fica
-						muito facil passar!</p>
+					<p class="card-text">Fatecando não fica de DP! Materiais certos
+						e organizados, Quizes, Simulados e auxílio dos Fatecandos fica
+						muito facíl passar!</p>
 				</div>
 			</div>
 		</div>
@@ -50,10 +53,10 @@
 		<div class="col">
 			<div class="card bg-dark text-white shadow-lg">
 				<div class="card-body">
-					<h4 class="card-title">Estude de graca</h4>
-					<p class="card-text">Voce nao paga nada para fazer os estudar.
-						Eh so se inscrever e comecar a estudar de qualquer lugar que tenha
-						conexao com a Internet.</p>
+					<h4 class="card-title">Estude de graça</h4>
+					<p class="card-text">Você não paga nada para estudar. É só
+						inscrever-se e começar a estudar de qualquer lugar que tenha
+						conexão com a Internet.</p>
 				</div>
 			</div>
 		</div>
@@ -62,8 +65,8 @@
 			<div class="card bg-success text-white shadow-lg">
 				<div class="card-body">
 					<h4 class="card-title">Mais que juntos, together</h4>
-					<p class="card-text">Estude com alunos que estao no mesmo barco
-						que voce.</p>
+					<p class="card-text">Estude com alunos que estão no mesmo barco
+						que você.</p>
 				</div>
 			</div>
 		</div>
