--- a/src/main/resources/templates/students/login.html
+++ b/src/main/resources/templates/students/login.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="www.thymeleaf.org"
 	th:replace="~{fragments/layout :: base('Login', ~{::body})}">
+<head>
+<meta charset="utf-8">
+</head>
 <body>
 	<div class="container-fluid col-md-6 mt-3">
-		<h4 class="text-center">Faca login no Fatecando!</h4>
+		<h4 class="text-center">Faça login no Fatecando!</h4>
 
 		<div class="card border border-danger">
 			<div class="card-body">
 				<form action="#" method="post">
 					<div class="mb-3">
-						<label>Email</label>
+						<label>E-mail</label>
 						<input class="form-control" type="email" name="email">
 					</div>
 					<div class="mb-3">
@@ -24,7 +27,7 @@
 
 		<div class="card mt-3">
 			<div class="card-body">
-				Nao tem conta ainda? Corre la e
+				Não tem conta ainda? Corre lá e
 				<a href="#" th:href="@{/join}">crie uma agora mesmo</a>
 				.
 			</div>
