--- a/src/main/resources/templates/students/signup.html
+++ b/src/main/resources/templates/students/signup.html
@@ -58,7 +58,7 @@
 
 						<div class="mb-3">
 							<label>Fatec</label>
-							<select id="fatecSelect" class="form-select">
+							<select id="fatecSelect" class="form-select select2">
 								<option value="1">Fatec Adamantina</option>
 								<option value="2">Fatec Araçatuba</option>
 								<option value="3">Fatec Araraquara</option>
