--- a/src/main/resources/templates/disciplines/disciplines.html
+++ b/src/main/resources/templates/disciplines/disciplines.html
@@ -3,14 +3,12 @@
 	th:replace="~{fragments/layout :: base('Disciplinas', ~{::body})}">
 <body>
 	<div class="mt-3">
-
 		<div class="row justify-content-md-center">
 			<div class="col-md-8">
 				<label for="inputFilter">Pesquise por</label>
 				<input id="inputFilter" class="form-control" type="text"
 					placeholder="Disciplina, Assunto, Palavra-chave">
 			</div>
-
 			<div class="col-6 col-md-4">
 				<label for="semesterSelect">Semestre</label>
 				<select id="semesterSelect" class="form-select">
@@ -24,12 +22,12 @@
 				</select>
 			</div>
 		</div>
-
 		<hr>
-
 		<!-- Discipline cards -->
-		<div class="row row-cols-1 row-cols-md-3 g-4">
-			<div class="col" th:each="discipline : ${disciplines}">
+		<div id="disciplinesContainer"
+			class="row row-cols-1 row-cols-md-3 g-4">
+			<div class="col" th:each="discipline : ${disciplines}"
+				th:data-semester="${discipline.semestre}">
 				<div class="card h-100 shadow-lg"
 					th:onclick="'go(\'' + ${discipline.id} + '\');'">
 					<img src="" class="card-img-top" alt="">
@@ -47,23 +45,67 @@
 				</div>
 			</div>
 		</div>
-
 	</div>
+	<script type="text/javascript" th:inline="javascript">
+		let disciplines = /*[[${disciplines}]]*/ null;
+		
+		$('#inputFilter').keyup(function() {
+		    let filter = $(this).val().toUpperCase();
+			
+		    let selectedSemester = parseInt($('#semesterSelect').val());
+		    
+		    let disciplinesFilteredBySemester = [];
+		    
+		    if (selectedSemester != 0) {
+		    	let selector = 'div[data-semester="' + selectedSemester  + '"]';
+		    	
+		    	disciplinesFilteredBySemester = $('#disciplinesContainer').find(selector);
+		    } else {
+		    	disciplinesFilteredBySemester = $('#disciplinesContainer').children();
+		    }
+		    
+		    disciplinesFilteredBySemester.each(function () {
+		    	let disciplineContainer = $(this);
+		    	let semester = disciplineContainer.data('semester');
+		    	let name = disciplineContainer.find('.card-title').first().text();
+		    	
+		    	for (let i = 0; i < disciplines.length; i++) {
+					let discipline = disciplines[i];
+		    		if (discipline.name === name && (
+		    				discipline.name.toUpperCase().indexOf(filter) > -1 ||
+		    				discipline.code.toUpperCase().indexOf(filter) > -1 ||
+		    				discipline.description.toUpperCase().indexOf(filter) > -1 ||
+		    				discipline.objetive.toUpperCase().indexOf(filter) > -1
+		    		)) {
+		    			disciplineContainer.show();
+		    			disciplineContainer.removeAttr('style');
+		    			break;
+		    		} else {
+		    			disciplineContainer.hide();
+		    		}
+		    	}
+		    });
+		});
 
-	<script type="text/javascript">		
-		$('#inputFilter').keyup(function () {
-			let text = $(this).val();
-			// TODO: select a card that contains a text filter
-			console.log(text);
+		$('#semesterSelect').change(function() {
+		    let selectedSemester = $(this).val();
+		    
+		    $('#disciplinesContainer').children().each(function () {
+		    	let semester = $(this).data('semester');
+		    	
+		    	if (selectedSemester == 0 || selectedSemester == semester) {
+		    		$(this).show();	
+		    		$(this).removeAttr('style');
+		    	} else {
+		    		$(this).hide();
+		    	}
+		    });
+		    
+		    $('#inputFilter').trigger('keyup');
 		});
-		
-		$('#semesterSelect').change(function () {
-			let value = $(this).val();
-			console.log(value);
-		});
-		
+
 		function go(disciplineId) {
-			location.href = '/disciplines/' + disciplineId;
+		    location.href = '/disciplines/' + disciplineId;
 		}
 	</script>
 </body>
