--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -25,11 +25,24 @@
 <script type="text/javascript" charset="utf8"
 	src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.js"></script>
 
+<!-- Select2 -->
+<link
+	href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
+	rel="stylesheet" />
+<script
+	src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
 <title
 	th:text="${title} == '' ? 'Fatecando' : ${title} + ' - Fatecando'"></title>
 
 <link rel="icon"
 	href="https://image.winudf.com/v2/image1/Y29tLnR5YWdveS5mYXRlY19pY29uXzE1NzM1NjM0MTRfMDMx/icon.png?w=170&fakeurl=1">
+	
+	<style type="text/css">
+		body {
+			background-color: #f9f7f7;
+		}
+	</style>
 </head>
 <body>
 	<header>
@@ -108,5 +121,8 @@
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
 		crossorigin="anonymous"></script>
+	<script type="text/javascript">
+		$('.select2').select2();
+	</script>
 </body>
 </html>
