--- a/src/main/resources/templates/disciplines/discipline-details.html
+++ b/src/main/resources/templates/disciplines/discipline-details.html
@@ -12,7 +12,7 @@
 			<br>
 			<br>
 
-			<b>Objetivo:</b> <span th:text="${discipline.objetive}"></span>
+			<b>Objetivo:</b> <span th:text="${discipline.semester}"></span>
 		</div>
 
 		<div class="progress">
