--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -37,12 +37,12 @@
 
 <link rel="icon"
 	href="https://image.winudf.com/v2/image1/Y29tLnR5YWdveS5mYXRlY19pY29uXzE1NzM1NjM0MTRfMDMx/icon.png?w=170&fakeurl=1">
-	
-	<style type="text/css">
-		body {
-			background-color: #f9f7f7;
-		}
-	</style>
+
+<style type="text/css">
+body {
+	background-color: #f9f7f7;
+}
+</style>
 </head>
 <body>
 	<header>
@@ -70,10 +70,12 @@
 						<li class="nav-item dropdown"><a
 								class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
 								role="button" data-bs-toggle="dropdown" aria-expanded="false">
-								Dropdown </a>
+								Opções do ADM</a>
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<li><a class="dropdown-item" href="#">Action</a></li>
-								<li><a class="dropdown-item" href="#">Another action</a></li>
+								<li><a class="dropdown-item" href="#"
+										th:href="@{/admin/courses}">Cursos</a></li>
+								<li><a class="dropdown-item" href="#"
+										th:href="@{/admin/disciplines}">Disciplinas</a></li>
 								<li>
 									<hr class="dropdown-divider">
 								</li>
@@ -84,7 +86,9 @@
 					<form class="d-flex">
 						<input class="form-control me-2" type="search"
 							placeholder="Pesquisar" aria-label="Search">
-						<button class="btn btn-outline-dark" type="submit">Pesquisar</button>
+						<button class="btn btn-outline-dark me-2" type="submit">Pesquisar</button>
+
+						<a class="btn btn-outline-light" href="#" th:href="@{/login}">Login</a>
 					</form>
 				</div>
 			</div>
