--- a/src/main/resources/templates/users/ranking.html
+++ b/src/main/resources/templates/users/ranking.html
@@ -61,28 +61,10 @@
 	<script type="text/javascript">
 		$('#rankingTable').DataTable({
 			ordering: false,
-			
+			language: {
+				url: '//cdn.datatables.net/plug-ins/1.10.22/i18n/Portuguese-Brasil.json'
+	        }
 		});
-		
-		/*
-		"language": {
-            "emptyTable": "Nenhum dado disponível na tabela",
-            "info": "Mostrando START a END de TOTAL registros",
-            "infoEmpty": "Mostrando 0 a 0 de 0 registros",
-            "lengthMenu": "Exibir MENU registros por página",
-            "loadingRecords": "Carregando...",
-            "processing": "Processando...",
-            "zeroRecords": "Nenhum registro correspondente encontrado",
-            "infoFiltered": "(filtrado do total de MAX entradas)",
-            "search": "Pesquisar:",
-            "paginate": {
-                "first":      "Primeiro",
-                "last":       "Último",
-                "next":       "Próximo",
-                "previous":   "Anterior"
-            },
-        }
-        */
 	</script>
 </body>
 </html>
