Implement the CRUD page for Institutions

--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -76,6 +76,10 @@ body {
 								Opções do ADM</a>
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<li>
+									<a class="dropdown-item" href="#"
+										th:href="@{/admin/institutions}">Instituições</a>
+								</li>
+								<li>
 									<a class="dropdown-item" href="#" th:href="@{/admin/courses}">Cursos</a>
 								</li>
 								<li>
